# job-posting-structure

./: README.md  requirements.txt  setup.cfg
doc/: diagram.drawio
src/jobstruct/: __init__.py  __main__.py  jobstruct.py  jobstructai.py  jobstructhtml.py  prompts.py  skillsnode.py  skillstaxonomyai.py
src/jobstruct/data/: onet_taxonomy.json  onet_taxonomy_renamed.csv  onet_taxonomy_renamed.json  onet_taxonomy_renamed.py  prompt_configs.json
tests/jobstruct/: SDE_Amazon_Robotics.html  SDE_Amazon_Robotics.json  SDE_Amazon_Robotics_JobStructAI.json  SDE_II.txt  SDE_II_JobStructAI.json  test_sde_amazon_robotics.py
