[metadata]
name = jobstruct
author = Suraj Maharjan
author_email = mhjsuraj@amazon.com
url = https://github.com/amazon-science/job-posting-structure
version = attr: jobstruct.__version__
license = Creative Commons Non-Commercial 4.0
description = Parses structured information from HTML-formatted job postings.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: Free for non-commercial use
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
install_requires = file: requirements.txt
python_requires = >= 3.8
setup_requires = setuptools
